@@ -532,6 +532,13 @@ public interface StorageServiceMBean extends NotificationEmitter
     public boolean isDrained();
     public boolean isDraining();
 
+    /** Check if currently bootstrapping.
+     * Note this becomes false before {@link org.apache.cassandra.db.SystemKeyspace#bootstrapComplete()} is called,
+     * as setting bootstrap to complete is called only when the node joins the ring.
+     * @return True prior to bootstrap streaming completing. False prior to start of bootstrap and post streaming.
+     */
+    public boolean isBootstrapMode();
+
     public void setRpcTimeout(long value);
     public long getRpcTimeout();
 
